resources/app-sre-stage/app-sre-rate-limiting-test/go-httpbin-envoy-sidecar.configmap.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: go-httpbin-envoy-sidecar-config
data:
  main.yaml: |
    # The administration endpoint uses a Unix socket instead of TCP in order
    # to avoid exposing it outside of the pod. Requests for metrics and
    # probes will go via an HTTP listener that only accepts requests for the
    # /metrics and /ready paths.
    admin:
      access_log_path: /dev/null
      address:
        pipe:
          path: /sockets/admin.socket

    static_resources:

      clusters:

      # This backend is used to send metrics and probes requests to the
      # administration endpoint.
      - name: admin
        connect_timeout: 1s
        type: STATIC
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: admin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  pipe:
                    path: /sockets/admin.socket

      # This cluster is used to send requests to the backend.
      - name: backend
        connect_timeout: 1s
        type: STATIC
        lb_policy: ROUND_ROBIN
        http_protocol_options: {}
        load_assignment:
          cluster_name: backend
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080

      # This cluster is used to send request to the rate limiting service.
      - name: limiter
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: limiter
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: limitador.app-sre-rate-limiting-test.svc
                    port_value: 8081

      listeners:

      # This listener is used to accept /metrics and /ready requests.
      # Everything else will be rejected.
      - name: admin
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 9000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: admin
              route_config:
                name: admin
                virtual_hosts:
                - name: admin
                  domains:
                  - "*"
                  routes:
                  - name: ready
                    match:
                      path: /ready
                    route:
                      cluster: admin
                  - name: metrics
                    match:
                      path: /metrics
                    route:
                      cluster: admin
                      prefix_rewrite: /stats/prometheus
              http_filters:
              - name: envoy.filters.http.router

      # This listener is used to accept inbound API requests.
      - name: ingress
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 9001
        filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: /secrets/tls/tls.crt
                  private_key:
                    filename: /secrets/tls/tls.key
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
              stat_prefix: ingress
              route_config:
                name: backend
                virtual_hosts:
                - name: all
                  domains:
                  - "*"
                  routes:

                  # This is an example of how to define a rate limit for a
                  # specific path.
                  - name: bearer
                    match:
                      path: /bearer
                    route:
                      cluster: backend
                      rate_limits:
                      - actions:
                        - generic_key:
                            descriptor_key: path
                            descriptor_value: bearer
    
                  - name: headers
                    match:
                      path: /headers
                    route:
                      cluster: backend
                      rate_limits:
                      - actions:
                        - generic_key:
                            descriptor_key: path
                            descriptor_value: headers
    
                  - name: ip
                    match:
                      path: /ip
                    route:
                      cluster: backend
                      rate_limits:
                      - actions:
                        - generic_key:
                            descriptor_key: path
                            descriptor_value: ip    

                  # Everything else not matching one of the rules above goes
                  # directly to the backend, without rate limits.
                  - name: default
                    match:
                      prefix: /
                    route:
                      cluster: backend

              http_filters:

              # This is needed to enable the rate limiter:
              - name: envoy.filters.http.ratelimit
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                  domain: go-httpbin
                  failure_mode_deny: false
                  timeout: 0.05s
                  rate_limit_service:
                    grpc_service:
                      envoy_grpc:
                        cluster_name: limiter
                    transport_api_version: V3

              # This is mandatory in order to have the HTTP routes above.
              - name: envoy.filters.http.router
